Wire up back button and create add vc class

--- a/Goals/Base.lproj/Main.storyboard
+++ b/Goals/Base.lproj/Main.storyboard
@@ -110,10 +110,10 @@
             </objects>
             <point key="canvasLocation" x="1076" y="138.98050974512745"/>
         </scene>
-        <!--View Controller-->
+        <!--AddVC-->
         <scene sceneID="UuH-11-UC0">
             <objects>
-                <viewController id="MrB-al-WmQ" sceneMemberID="viewController">
+                <viewController id="MrB-al-WmQ" customClass="AddVC" customModule="Goals" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="b1a-58-6HC"/>
                         <viewControllerLayoutGuide type="bottom" id="gx9-lt-Uf1"/>
@@ -135,6 +135,9 @@
                                     <constraint firstAttribute="height" constant="22" id="wB0-au-qzY"/>
                                 </constraints>
                                 <state key="normal" image="Back Chevron"/>
+                                <connections>
+                                    <action selector="backPressed:" destination="MrB-al-WmQ" eventType="touchUpInside" id="XC3-Op-A1C"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Save" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m50-d6-Adx">
                                 <rect key="frame" x="315" y="45" width="44" height="27.5"/>
